RESULTS/AutoSpec/raw_results/out-3.5-NLA_lipus/out-sv-comp-mx/out/seq_true-unreach-call_0009/seq_true-unreach-call_merged.txt
/home/dimpling/AutoSpec/out/seq_true-unreach-call_0009/seq_true-unreach-call_merged.c:29:3: error: unterminated comment
   29 |   /* Loop invariant for the second loop */;
      |   ^
